# wikiscraper

./: .gitignore  README.md  pyproject.toml
tests/: test_wikiscraper.py
wikiscraper/: __main__.py  wikiscraper.py
wikiscraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
