[tool.poetry]
name = "wikiscraper"
version = "0.1.0"
description = ""
authors = ["Ben Nordstrom <ben.nordstrom@gengo.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wikipedia = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
